[package]
name = "rdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdm-macros = {path = "crates/rdm-macros" }
clap = { version = "3.2.14", features = ["derive", "env"] }
shellexpand = "2.1"
mlua = { version = "0.8.1", features = ["luajit"] }
git2 = "0.14.4"
toml = "0.5.9"
pathdiff = "0.2.1"
serde = {version = "1.0.140", features = ["derive"] }
rdm-log = { path = "crates/rdm-log" }
log = "0.4.17"
simplelog = "0.12.0"
curl = "0.4.44"
run_script = "0.10.0"
pretty = "0.11.3"
console = "0.15.1"
