[package]
name = "rdm-log"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A library containing loggers used in `rdm'."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4.17", features = ["std"]}
ansi_term = "0.12.1"
pretty = "0.11.3"
console = "0.15.1"
