[package]
name = "rdm-lua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
git2 = "0.14.4"
log = "0.4.17"
mlua = { version = "0.8.1", features = ["luajit"] }
pathdiff = "0.2.1"
pretty = "0.11.3"
rdm-log = { path = "../rdm-log" }
rdm-macros = { path = "../rdm-macros" }
run_script = "0.10.0"
